--- a/settings.gradle
+++ b/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "testfarma_TC2007"
+rootProject.name = "TestFarma_app"
 include ':app'
