--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.testfarma_app">
-    
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -16,7 +16,10 @@
         android:theme="@style/Theme.TestFarma_app"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".SignIn"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity_NotSignedIn"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
