--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.TestFarma_app"
         tools:targetApi="31">
         <activity
+            android:name=".carrito"
+            android:exported="false" />
+        <activity
             android:name=".estudio"
             android:exported="false" />
         <activity
