--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,7 @@ plugins {
 
 android {
     compileSdk 32
+    buildFeatures {viewBinding true}
 
     defaultConfig {
         applicationId "com.example.testfarma_app"
