--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.TestFarma_app"
         tools:targetApi="31">
         <activity
+            android:name=".HomeActivity"
+            android:exported="false" />
+        <activity
             android:name=".resultado"
             android:exported="false" />
         <activity
@@ -42,4 +45,5 @@
             </intent-filter>
         </activity>
     </application>
+
 </manifest>
