--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,8 @@ dependencies {
     implementation("androidx.navigation:navigation-ui-ktx:2.5.1")
     implementation platform('com.google.firebase:firebase-bom:30.3.1')
     implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation 'com.github.bumptech.glide:glide:4.13.2'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
     //implementation 'com.google.firebase:firebase-core:21.1.0'
     //implementation 'com.google.firebase:firebase-database:20.0.5'
     //implementation 'info.hoang8f:fbutton:1.0.5'
