--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,14 @@
         android:theme="@style/Theme.TestFarma_app"
         tools:targetApi="31">
         <activity
+            android:name=".estudio_detail"
+            android:theme="@style/AppTheme_translucent"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".HomeActivity"
             android:exported="false" />
         <activity
