Fixed bug that broke resultados

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,11 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    buildFeatures{
+        viewBinding = true
+        dataBinding true
+    }
+
     buildTypes {
         release {
             minifyEnabled false
