--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,8 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:30.3.1')
     implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'com.github.bumptech.glide:glide:4.13.2'
+    implementation 'com.google.android.gms:play-services-auth:20.3.0'
+
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
 
     implementation 'com.google.firebase:firebase-storage-ktx' //Storage
