--- a/build.gradle
+++ b/build.gradle
@@ -5,14 +5,19 @@ buildscript {
         mavenCentral()
     }
     dependencies {
+//<<<<<<< Updated upstream
         classpath 'com.google.gms:google-services:4.3.14'
         classpath 'com.android.tools.build:gradle:7.2.2'
+//=======
+        classpath 'com.google.gms:google-services:4.3.13'
+        classpath 'com.android.tools.build:gradle:7.3.0'
+//>>>>>>> Stashed changes
     }
 }
 
 plugins {
-    id 'com.android.application' version '7.2.2' apply false
-    id 'com.android.library' version '7.2.2' apply false
+    id 'com.android.application' version '7.3.0' apply false
+    id 'com.android.library' version '7.3.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
 }
 
