--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,8 +69,10 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.1.1'
 
-
-
+    //notificacion badge
+    implementation 'com.nex3z:notification-badge:1.0.4'
+    //eventbus
+    implementation 'org.greenrobot:eventbus:3.3.1'
 
     //implementation 'com.google.firebase:firebase-core:21.1.0'
     //implementation 'com.google.firebase:firebase-database:20.0.5'
