--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,4 +81,7 @@ dependencies {
 
     // Add the dependencies for any other desired Firebase products
     // https://firebase.google.com/docs/android/setup#available-libraries
+
+    //Progress Dialog Library
+    implementation 'com.jpardogo.googleprogressbar:library:1.2.0'
 }
