agregar producto al carrito

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
             android:exported="false" />
 
         <activity
-            android:name=".carrito"
+            android:name=".Carrito"
             android:exported="false" />
         <activity
             android:name=".estudio"
