--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,9 +17,16 @@
         android:theme="@style/Theme.TestFarma_app"
         tools:targetApi="31">
         <activity
-            android:name=".estudio_detail"
-            android:theme="@style/AppTheme_translucent"
+            android:name=".privacidad"
             android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".estudio_detail"
+            android:exported="false"
+            android:theme="@style/AppTheme_translucent">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -30,7 +37,6 @@
         <activity
             android:name=".resultado"
             android:exported="false" />
-
         <activity
             android:name=".Carrito"
             android:exported="false" />
